Add the Remote Tech Configs Back & Fix a slight format issue

--- a/GameData/ROCapsules/PartConfigs/CST/CSTCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/CST/CSTCM.cfg
@@ -266,6 +266,50 @@ PART
 }
 
 //	==================================================
+//	Remote Tech compatibility.
+//	==================================================
+
+@PART[ROC-CSTCM]:AFTER[RealismOverhaul]:NEEDS[RemoteTech]
+{
+	!MODULE[ModuleDataTransmitter],*{}
+
+	!MODULE[ModuleSPU*],*{}
+
+	!MODULE[ModuleRTAntenna*],*{}
+
+	@MODULE[ModuleCommand]
+	{
+		@RESOURCE[ElectricCharge]
+		{
+			@rate -= 0.025
+		}
+	}
+
+	MODULE
+	{
+		name = ModuleSPU
+	}
+
+	MODULE
+	{
+		name = ModuleRTAntenna
+		IsRTActive = True
+		Mode0OmniRange = 0
+		Mode1OmniRange = 800000
+		EnergyCost = 0.025
+		DeployFxModules = 0
+		ProgressFxModules = 1
+
+		TRANSMITTER
+		{
+			PacketInterval = 1.0
+			PacketSize = 1.024
+			PacketResourceCost = 0.01
+		}
+	}
+}
+
+//	==================================================
 //	CST-100 command module.
 
 //	TAC Life Support compatibility.
