Add RemoteTech Configs back in

--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloHGABlockV.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloHGABlockV.cfg
@@ -24,6 +24,11 @@
 	{
 		@animationName = deploy
 	}
+
+	@MODULE[ModuleRTAntenna]:NEEDS[RemoteTech]
+	{
+		@Mode1OmniRange *= 2
+	}
 }
 
 //	================================================================================
