--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/TU_Support_ApolloETS.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/TU_Support_ApolloETS.cfg
@@ -223,6 +223,9 @@ KSP_MODEL_SHADER
 		mesh = bell
 		mesh = polySurface29
 
+		excludeMesh = innerGlow
+		excludeMesh = innerGlow 1
+
 		PROPERTY
 		{
 			name = _Color
@@ -260,6 +263,9 @@ KSP_MODEL_SHADER
 		mesh = pCylinder139_ncl1_1
 		mesh = polySurface29
 		mesh = pTorus3
+
+		excludeMesh = innerGlow
+		excludeMesh = innerGlow 1
 
 		PROPERTY
 		{
