--- a/GameData/ROCapsules/PartConfigs/Vostok/VostokAntenna.cfg
+++ b/GameData/ROCapsules/PartConfigs/Vostok/VostokAntenna.cfg
@@ -53,6 +53,41 @@ PART
 	maxTemp = 673.15
 	skinMaxTemp = 773.15
 	fuelCrossFeed = false
+
+//	================================================================================
+//	Comms
+//	================================================================================
+
+	MODULE:NEEDS[!RemoteTech]
+	{
+		name = ModuleDataTransmitter
+		antennaType = DIRECT
+		packetInterval = 1.0
+		packetSize = 1.0
+		requiredResource = ElectricCharge
+		antennaPower = 400
+		packetResourceCost = 0.004
+	}
+	
+	MODULE:NEEDS[RemoteTech]
+	{
+		name = ModuleSPU
+	}
+	
+	MODULE:NEEDS[RemoteTech]
+	{
+		name = ModuleRTAntennaPassive
+		TechRequired = unlockParts
+
+		OmniRange = 1000000
+
+		TRANSMITTER
+		{
+			PacketInterval = 0.4
+			PacketSize = 0.27
+			PacketResourceCost = 0.025
+		}
+	}
 }
 
 //	================================================================================
