Fix up some Realplume Configs

--- a/GameData/ROCapsules/PartConfigs/Dragon/KK/Dragon2CM.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/KK/Dragon2CM.cfg
@@ -440,7 +440,7 @@ PART
 //	Configure RealPlume
 //	================================================================================
 
-@PART[ROC-Dragon2CM]:BEFORE[RealPlume]
+@PART[ROC-Dragon2CM]:BEFORE[RealPlume]:NEEDS[SmokeScreen]
 {
 	PLUME_TEMPLATE
 	{
