--- a/GameData/ROCapsules/PartConfigs/Dragon/KK/Dragon2CMLunar.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/KK/Dragon2CMLunar.cfg
@@ -440,7 +440,7 @@ PART
 //	Configure RealPlume
 //	================================================================================
 
-@PART[ROC-Dragon2CMLunar]:BEFORE[RealPlume]
+@PART[ROC-Dragon2CMLunar]:BEFORE[RealPlume]:NEEDS[SmokeScreen]
 {
 	PLUME_TEMPLATE
 	{
