--- a/GameData/ROCapsules/PartConfigs/Starship/Vader111/StarshipLunarTank.cfg
+++ b/GameData/ROCapsules/PartConfigs/Starship/Vader111/StarshipLunarTank.cfg
@@ -445,7 +445,7 @@ PART
 //	Starship Lunar Engine Cluster (vacuum variant) plume setup.
 //	==================================================
 
-@PART[ROC-StarshipLunarTank]:FOR[RealPlume]:NEEDS[SmokeScreen]
+@PART[ROC-StarshipLunarTank]:BEFORE[RealPlume]:NEEDS[SmokeScreen]
 {
 	PLUME
 	{
