--- a/GameData/ROCapsules/PartConfigs/CST/CSTRS88.cfg
+++ b/GameData/ROCapsules/PartConfigs/CST/CSTRS88.cfg
@@ -99,7 +99,7 @@ PART
 //	CST RealPlume Support
 //	============================================================================
 
-@PART[ROC-CSTRS88]:NEEDS[RealPlume]:BEFORE[RealPlume]
+@PART[ROC-CSTRS88]:BEFORE[RealPlume]:NEEDS[SmokeScreen]
 {
 	PLUME
 	{
