--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloEngineBlockIII.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloEngineBlockIII.cfg
@@ -122,7 +122,7 @@ PART
 //	Block III SPS plume configuration.
 //	==================================================
 
-@PART[ROC-ApolloEngineBlockIII]:BEFORE[RealPlume]
+@PART[ROC-ApolloEngineBlockIII]:BEFORE[RealPlume]:NEEDS[SmokeScreen]
 {
 	PLUME
 	{
