--- a/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSCapsule.cfg
+++ b/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSCapsule.cfg
@@ -375,7 +375,7 @@ PART
 //	Configure RealPlume
 //	================================================================================
 
-@PART[ROC-SoyuzMSCapsule]:FOR[RealPlume]:NEEDS[SmokeScreen]
+@PART[ROC-SoyuzMSCapsule]:BEFORE[RealPlume]:NEEDS[SmokeScreen]
 {
 	PLUME
 	{
