Fix Realplume configs & Add the Remotetech Configs Back in

--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/RP_GeminiBDB.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/RP_GeminiBDB.cfg
@@ -1,5 +1,5 @@
 //Star 13E retro
-@PART[ROC-GeminiRetroBDB]:NEEDS[RealPlume]
+@PART[ROC-GeminiRetroBDB]:BEFORE[RealPlume]
 {
 	PLUME
 	{
@@ -26,7 +26,7 @@
 }
 
 //Gemini B sepmotors
-@PART[ROC-GeminiBEquipmentSection]:NEEDS[RealPlume]
+@PART[ROC-GeminiBEquipmentSection]:BEFORE[RealPlume]
 {
 	PLUME
 	{
