--- a/GameData/ROCapsules/PartConfigs/LEM/LEMAscent.cfg
+++ b/GameData/ROCapsules/PartConfigs/LEM/LEMAscent.cfg
@@ -683,6 +683,77 @@ PART
 }
 
 //	================================================================================
+//	Configure RemoteTech
+//	================================================================================
+
+@PART[ROC-LEMAscent]:FOR[ROCapsules]:NEEDS[RemoteTech]
+{
+	@description ^= :$: Features an integrated telecommunications system with a maximum effective range of 600 Mm, power consumption 50 Watts, data rate 1 Mbit/s.
+
+	!MODULE[ModuleDataTransmitter],*{}
+
+	!MODULE[ModuleRTAntenna*],{}
+
+	!MODULE[ModuleSPU*],*{}
+
+	@MODULE[ModuleCommand]
+	{
+		@RESOURCE[ElectricCharge]
+		{
+			@rate -= 0.025
+		}
+	}
+
+	MODULE
+	{
+		name = ModuleSPU
+		IsRTCommandStation = False
+		RTCommandMinCrew = 0
+	}
+
+	//	Parabolic S-band antenna for Earth communications.
+	MODULE
+	{
+		name = ModuleRTAntenna
+		ActionMode0Name = Deactivate HGA
+		ActionMode1Name = Activate HGA
+		IsRTActive = False
+		Mode0DishRange = 0
+		Mode1DishRange = 600000
+		DishAngle = 13.0
+		EnergyCost = 0.025
+		DeployFxModules = 0
+
+		TRANSMITTER
+		{
+			PacketInterval = 1.0
+			PacketSize = 1.024
+			PacketResourceCost = 0.025
+		}
+	}
+
+	//	Omnidirectional UHF antennas for CSM and surface EVA communications.
+	MODULE
+	{
+		name = ModuleRTAntenna
+		ActionMode0Name = Deactivate LGA
+		ActionMode1Name = Activate LGA
+		IsRTActive = False
+		Mode0OmniRange = 0
+		Mode1OmniRange = 100000
+		EnergyCost = 0.025
+		DeployFxModules = 0
+
+		TRANSMITTER
+		{
+			PacketInterval = 1.0
+			PacketSize = 0.512
+			PacketResourceCost = 0.025
+		}
+	}
+}
+
+//	================================================================================
 //	Configure RealAntennas
 //	================================================================================
 
@@ -718,7 +789,7 @@ PART
 //	Lunar Module ascent stage plume configuration.
 //	==================================================
 
-@PART[ROC-LEMAscent]:FOR[RealPlume]:NEEDS[SmokeScreen]
+@PART[ROC-LEMAscent]:BEFORE[RealPlume]:NEEDS[SmokeScreen]
 {
 	PLUME
 	{
