--- a/GameData/ROCapsules/PartConfigs/LEM/LEMRover.cfg
+++ b/GameData/ROCapsules/PartConfigs/LEM/LEMRover.cfg
@@ -359,6 +359,50 @@ PART
 }
 
 //	================================================================================
+//	Configure RemoteTech
+//	================================================================================
+
+@PART[ROC_LEMRover]:FOR[ROCapsules]:NEEDS[RemoteTech]
+{
+	!MODULE[ModuleDeployableAntenna],*{}
+
+	!MODULE[ModuleDataTransmitter],*{}
+
+	!MODULE[ModuleRTAntenna*],*{}
+
+	!MODULE[ModuleSPU*],*{}
+
+	MODULE
+	{
+		name = ModuleSPU
+		IsRTCommandStation = False
+		RTCommandMinCrew = 0
+	}
+
+	//	One parabolic S-band HGA, part of the Lunar Communications Relay Unit (LCRU).
+	//	Nominal transceiver power output is 8 Watts.
+
+	MODULE
+	{
+		name = ModuleRTAntenna
+		ActionMode0Name = Deactivate LCRU
+		ActionMode1Name = Activate LCRU
+		IsRTActive = False
+		Mode0DishRange = 0
+		Mode1DishRange = 400000
+		DishAngle = 10.0
+		EnergyCost = 0.008
+
+		TRANSMITTER
+		{
+			PacketInterval = 1.0
+			PacketSize = 0.512
+			PacketResourceCost = 0.008
+		}
+	}
+}
+
+//	================================================================================
 //	Configure RealAntennas
 //	================================================================================
 
