Fixed Hopefully All issues & added a MM Section to remove if CH-4 Is installed

--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2AJ10-133.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2AJ10-133.cfg
@@ -1,4 +1,4 @@
-PART
+PART:NEEDS[!CH4]
 {
 	name = ROC-D2AJ10-133
 	module = Part
@@ -189,7 +189,7 @@ PART
 //	AJ10-133-LH plume configuration.
 //	==================================================
 
-@PART[ROC-D2AJ10-133]:BEFORE[RealPlume]
+@PART[ROC-D2AJ10-133]:BEFORE[RealPlume]:NEEDS[SmokeScreen]
 {
 	//main wispy red plume
 	PLUME
