--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2Antenna.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2Antenna.cfg
@@ -1,4 +1,4 @@
-PART
+PART:NEEDS[!CH4]
 {
 	name = ROC-D2Antenna
 	module = Part
@@ -53,6 +53,9 @@ PART
 	breakingTorque = 250
 	maxTemp = 673.15
 	skinMaxTemp = 773.15
+    emissiveConstant = 0.6
+    thermalMassModifier = 1.0
+    skinMassPerArea = 4
 
 	//	============================================================================
 	//	Comms
@@ -67,6 +70,47 @@ PART
 		endEventGUIName = Retract Antenna
 		actionGUIName = Toggle Antenna
 		allowAnimationWhileShielded = False
+	}
+
+	MODULE:NEEDS[!RemoteTech]
+	{
+		name = ModuleDataTransmitter
+		antennaType = DIRECT
+		packetInterval = 1.0
+		packetSize = 1.28
+		packetResourceCost = 0.01
+		requiredResource = ElectricCharge
+		DeployFxModules = 0
+		antennaPower = 5750000000
+		antennaCombinable = True
+		antennaCombinableExponent = 1.0
+	}
+
+	MODULE:NEEDS[RemoteTech]
+	{
+		name = ModuleSPUPassive
+	}
+
+	MODULE:NEEDS[RemoteTech]
+	{
+		name = ModuleRTAntenna
+		ActionMode0Name = Deactivate HGA
+		ActionMode1Name = Activate HGA
+		IsRTActive = False
+		Mode0DishRange = 0
+		Mode1DishRange = 75e6
+		DishAngle = 25
+		MaxQ = 6000
+		EnergyCost = 0.05
+		DeployFxModules = 0
+		ProgressFxModules = 1
+
+		TRANSMITTER 
+		{
+			PacketInterval = 0.1
+			PacketSize = 1
+			PacketResourceCost = 0.01
+		}
 	}
 }
 
