--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2Block1LES.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2Block1LES.cfg
@@ -1,4 +1,4 @@
-PART
+PART:NEEDS[!CH4]
 {
 	name = ROC-D2Block1LES
 	module = Part
@@ -113,7 +113,7 @@ PART
 	}
 }
 
-@PART[ROC-D2Block1LES]:BEFORE[RealPlume]
+@PART[ROC-D2Block1LES]:BEFORE[RealPlume]:NEEDS[SmokeScreen]
 {
 	PLUME
 	{
@@ -133,7 +133,7 @@ PART
 		speed = 1.0
 	}
 
-	@MODULE[ModuleEnginesRF]:HAS[#thrustVectorTransformName[thrustTransform]]
+	@MODULE[ModuleEnginesRF]
 	{
 		%powerEffectName = Solid-Lower
 	}
