--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2Block2LES.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2Block2LES.cfg
@@ -1,4 +1,4 @@
-PART
+PART:NEEDS[!CH4]
 {
 	name = ROC-D2Block2LES
 	module = Part
@@ -125,7 +125,7 @@ PART
 	}
 }
 
-@PART[ROC-D2Block2LES]:BEFORE[RealPlume]
+@PART[ROC-D2Block2LES]:BEFORE[RealPlume]:NEEDS[SmokeScreen]
 {
 	PLUME
 	{
@@ -145,7 +145,7 @@ PART
 		speed = 1.0
 	}
 
-	@MODULE[ModuleEnginesRF]:HAS[#thrustVectorTransformName[thrustTransform]]
+	@MODULE[ModuleEnginesRF]
 	{
 		%powerEffectName = Solid-Lower
 	}
