--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2CommandModule.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2CommandModule.cfg
@@ -1,4 +1,4 @@
-PART
+PART:NEEDS[!CH4]
 {
 	name = ROC-D2CM
 	module = Part
@@ -280,6 +280,50 @@ PART
 			}
 		}		
 	}
+
+	//	============================================================================
+	//	Comms
+	//	============================================================================
+
+	MODULE:NEEDS[!RemoteTech]
+	{
+		name = ModuleDataTransmitter
+		antennaType = DIRECT
+		antennaPower = 64
+		antennaCombinable = True
+		antennaCombinableExponent = 2.0
+		packetInterval = 1.0
+		packetSize = 2.0
+		requiredResource = ElectricCharge
+		packetResourceCost = 0.04
+		DeployFxModules = 0
+	}
+
+	MODULE:NEEDS[RemoteTech]
+	{
+		name = ModuleSPU
+		IsRTCommandStation = False
+		RTCommandMinCrew = 0
+	}
+
+	MODULE:NEEDS[RemoteTech]
+	{
+		name = ModuleRTAntenna
+		ActionMode0Name = Deactivate Internal Antenna
+		ActionMode1Name = Activate Internal Antenna
+		IsRTActive = False
+		Mode0OmniRange = 0
+		Mode1OmniRange = 400000
+		EnergyCost = 0.02
+		DeployFxModules = 0
+
+		TRANSMITTER
+		{
+			PacketInterval = 0.4
+			PacketSize = 0.27
+			PacketResourceCost = 0.025
+		}
+	}
 }
 
 //  ================================================================================
@@ -295,6 +339,16 @@ PART
 		referenceGain = 3.0		//Guess based on Block II
 		RFBand = S		//Default to S-band
 	}
+}
+
+//  ================================================================================
+//	Stop Capsule Going Kaboom During Reentry
+//  ================================================================================
+
+@PART[ROC-D2CM]:AFTER[zzzRealismOverhaul]
+{
+    %maxTemp = 900
+    %skinMaxTemp = 3600
 }
 
 //	==================================================
