--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2Interstage.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2Interstage.cfg
@@ -1,4 +1,4 @@
-PART
+PART:NEEDS[!CH4]
 {
 	name = ROC-D2Interstage
 	module = Part
@@ -59,6 +59,9 @@ PART
 	breakingTorque = 250
 	maxTemp = 973.15
 	skinMaxTemp = 2073.15
+    emissiveConstant = 0.6
+    thermalMassModifier = 1.0
+    skinMassPerArea = 4
 	fuelCrossFeed = true
 	stageOffset = 1
 	childStageOffset = 1
