--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2MissionModule2.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2MissionModule2.cfg
@@ -1,4 +1,4 @@
-PART
+PART:NEEDS[!CH4]
 {
 	name = ROC-D2MissionModule2
 	module = Part
@@ -64,6 +64,9 @@ PART
 	breakingTorque = 250
 	maxTemp = 673.15
 	skinMaxTemp = 773.15
+    emissiveConstant = 0.6
+    thermalMassModifier = 1.0
+    skinMassPerArea = 4
 	fuelCrossFeed = true
 
 	//	============================================================================
