--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2Parachute.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2Parachute.cfg
@@ -1,4 +1,4 @@
-PART
+PART:NEEDS[!CH4]
 {
 	name = ROC-D2Parachute
 	module = Part
@@ -147,12 +147,15 @@ PART
 	}
 }
 
-@PART[ROC-D2Parachute]:AFTER[zzzRealismOverhaul]
+@PART[ROC-D2Parachute]:NEEDS[DeadlyReentry,RealChute,RealismOverhaul]:AFTER[zzzRealismOverhaul]
 {
-	@maxTemp = 973.15
-	@skinMaxTemp = 2673.15
+	@maxTemp = 3600
+	MODULE
+	{
+		name = ModuleAeroReentry
+		%skinMaxTemp = 3600
+	}
 }
-
 
 @PART[ROC-D2Parachute]:AFTER[zzzRealismOverhaul]
 {
