--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2ServiceModule.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2ServiceModule.cfg
@@ -1,4 +1,4 @@
-PART
+PART:NEEDS[!CH4]
 {
 	name = ROC-D2ServiceModule
 	module = Part
@@ -55,7 +55,7 @@ PART
 	fuelCrossFeed = true
 	emissiveConstant = 0.6 // not too absorptive for reentry
 	thermalMassModifier = 1.0
-	skinMassPerArea = 2.0
+	skinMassPerArea = 4.0
 	radiatorHeadroom = 0.5
 
 	//	============================================================================
