--- a/GameData/ROCapsules/PartConfigs/Apollo D2/TU_Support_ApolloD2.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/TU_Support_ApolloD2.cfg
@@ -86,6 +86,9 @@ KSP_MODEL_SHADER
 	{
 		shader = TU/Metallic
 
+		excludeMesh = innerGlow
+		excludeMesh = innerGlow 1
+
 		PROPERTY
 		{
 			name = _Color
