--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2Block1LESDecoupler.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2Block1LESDecoupler.cfg
@@ -1,4 +1,4 @@
-PART
+PART:NEEDS[!CH4]
 {
 	name = ROC-D2Block1LESDecoupler
 	module = Part
@@ -58,6 +58,9 @@ PART
 	breakingTorque = 250
 	maxTemp = 973.15
 	skinMaxTemp = 2073.15
+    emissiveConstant = 0.6
+    thermalMassModifier = 1.0
+    skinMassPerArea = 4
 	stagingIcon = DECOUPLER_HOR
 	fuelCrossFeed = False
 	stageOffset = 1
