--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2Skirt1.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2Skirt1.cfg
@@ -1,4 +1,4 @@
-PART
+PART:NEEDS[!CH4]
 {
 	name = ROC-D2Skirt1
 	module = Part
@@ -64,6 +64,7 @@ PART
 	heatConductivity = 0.04
 	thermalMassModifier = 1.0
 	emissiveConstant = 0.6
+	skinMassPerArea = 4
 
 	//	============================================================================
 	//	Animations and Textures
