CST Updates and Fixes (#65)
Fix CST Nosecone Model and fix up a bunch of issues.

--- a/GameData/ROCapsules/PartConfigs/CST/CSTCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/CST/CSTCM.cfg
@@ -1,48 +1,63 @@
-//	==================================================
-//	Sources:
-
-//	Boeing - Design Considerations for a Commercial Crew Transportation System: http://www.boeing.com/assets/pdf/defense-space/space/ccts/docs/Space_2011_Boeing.pdf
-//	Boeing - CST-100 Commercial Crew Transportation System overview:			http://www.boeing.com/assets/pdf/defense-space/space/ccts/docs/CCDev2%20Boeing%20CST-100%20Overview.pdf
-
-//	==================================================
-//	CST-100 command module.
-
-//	Dimensions: 4.65 m x 2.6 m
-//	Gross Mass: 4500 Kg
-//	==================================================
-
 PART
 {
 	name = ROC-CSTCM
 	module = Part
 	author = Hanson Ma, Colton Franke, VoidCosmos, Drakenex, zer0Kerbal, capkirk
+
 	RSSROConfig = True
-	
+
+	//	============================================================================
+	//	Model and Dimensions
+	//	============================================================================
+
 	MODEL
 	{
 		model = ROCapsules/Assets/CST/commandModule/model
 	}
-	
+
+	INTERNAL
+	{
+		name = CST100internal
+	}
+
 	scale = 1
 	rescaleFactor = 1.24
-	
+
 	node_stack_bottom = 0.0, -0.9 , 0.0, 0.0, -1.0, 0.0, 2
-	node_stack_top_1 = 0.0, 1.28, 0.0, 0.0, 1.0, 0.0, 1
-	node_stack_top_2 = 0.0, 0.78775, 0.0, 0.0, 1.0, 0.0, 1
+	node_stack_top = 0.0, 1.28, 0.0, 0.0, 1.0, 0.0, 1
+	node_stack_parachute = 0.0, 0.78775, 0.0, 0.0, 1.0, 0.0, 2
+
+	attachRules = 1,0,1,1,0
+
 	CoPOffset = 0.0, 0.5, 0.0
 	CoLOffset = 0.0, -0.45, 0.0
 	CoMOffset = 0.0, -1.0, 0.0
-	
-	TechRequired = commandModules
-	entryCost = 10000
-	cost = 4500
+
+	buoyancy = 1.5
+	buoyancyUseSine = False
+
+	//	============================================================================
+	//	Title, Description, Category, Techs
+	//	============================================================================
+
+	TechRequired = unlockParts
+	cost = 150
+	entryCost = 1
 	category = Pods
 	subcategory = 0
 	title = CST-100 Command Module
 	manufacturer = Boeing
 	description = The command module of the CST-100 "Starliner" Commercial Crew Transportation System (COTS). Designed to be reusable for up to 10 times.
-	attachRules = 1,0,1,1,0
-	
+	tags = starliner, boeing, cst100, cst-100, 100
+
+	vesselType = Ship
+	CrewCapacity = 7
+	bulkheadProfiles = size3, size1
+
+	//	============================================================================
+	//	Thermo, Durability
+	//	============================================================================
+
 	mass = 4.35
 	dragModelType = default
 	breakingForce = 250
@@ -51,25 +66,28 @@ PART
 	minimum_drag = 0.15
 	angularDrag = 2
 	crashTolerance = 12
-	maxTemp = 673.15
-	skinMaxTemp = 773.15
-	vesselType = Ship
-	CrewCapacity = 7
-	bulkheadProfiles = size3, size1
-	
-	tags = starliner, boeing, cst100, cst-100, 100
-	
+	maxTemp = 973.15
+	skinMaxTemp = 2673.15
+	emissiveConstant = 0.6
+	thermalMassModifier = 1.0
+	skinMassPerArea = 4
+
+	//	============================================================================
+	//	Animations and Textures
+	//	============================================================================
+
 	EFFECTS
 	{
 		rcs
 		{
-			AUDIO
+			AUDIO_MULTI_POOL
 			{
 				channel = Ship
+				transformName = RCS
 				clip = sound_rocket_mini
 				volume = 0.0 0.0
-				volume = 0.1 0.0
-				volume = 0.5 0.025
+				volume = 0.02 0.1
+				volume = 0.5 0.1
 				volume = 1.0 0.1
 				pitch = 0.0 0.75
 				pitch = 1.0 1.5
@@ -88,12 +106,11 @@ PART
 			}
 		}
 	}
-	
-	INTERNAL
-	{
-		name = CST100internal
-	}
-	
+
+	//	============================================================================
+	//	Modules and Resources
+	//	============================================================================
+
 	MODULE
 	{
 		name = ModuleCommand
@@ -107,19 +124,19 @@ PART
 			rate = 1.6
 		}
 	}
-	
+
 	MODULE
 	{
 		name = ModuleSAS
 		SASServiceLevel = 3
 	}
-	
+
 	MODULE
 	{
 		name = AdjustableCoMShifter
-		DescentModeCoM = 0.0, 0.0, 0.3
+		DescentModeCoM = 0.0, 0.0, -0.3
 	}
-	
+
 	MODULE
 	{
 		name = ModuleScienceExperiment
@@ -135,7 +152,7 @@ PART
 		usageReqMaskInternal = 5
 		usageReqMaskExternal = -1
 	}
-	
+
 	MODULE
 	{
 		name = ModuleScienceContainer
@@ -144,15 +161,16 @@ PART
 		evaOnlyStorage = True
 		storageRange = 2.5
 	}
-	
+
 	MODULE
 	{
 		name = ModuleRCSFX
+		stagingEnabled = True
 		thrusterTransformName = RCS
 		thrusterPower = 0.445
 		resourceFlowMode = STAGE_PRIORITY_FLOW
 		runningEffectName = rcs
-		
+
 		PROPELLANT
 		{
 			name = Hydrazine
@@ -172,7 +190,7 @@ PART
 			key = 1 82
 		}
 	}
-	
+
 	MODULE
 	{
 		name = ModuleFuelTanks
@@ -207,12 +225,6 @@ PART
 			maxAmount = 1500
 		}
 	}
-	
-	MODULE
-	{
-		name = FlagDecal
-		textureQuadName = flagTransform
-	}
 }
 
 //correct internals?
@@ -234,6 +246,26 @@ PART
 //	==================================================
 //	CST-100 command module.
 
+//	Real Antennas compatibility.
+//	==================================================
+@PART[ROC-CSTCM]:BEFORE[RealAntennas]
+{
+	!MODULE[ModuleDataTransmitter],* {}
+	MODULE
+	{
+		name = ModuleRealAntenna
+		antennaDiameter = 0.8	//Same as Orion because I cannot find any data
+		RFBand = K	//Default to K-band
+	}
+	MODULE
+	{
+		name = ModuleRealAntenna
+		referenceGain = 1.5
+		RFBand = S		//Default to S-band
+	}
+}
+
+//	==================================================
 //	Remote Tech compatibility.
 //	==================================================
 
@@ -274,28 +306,6 @@ PART
 			PacketSize = 1.024
 			PacketResourceCost = 0.01
 		}
-	}
-}
-
-//	==================================================
-//	CST-100 command module.
-
-//	Real Antennas compatibility.
-//	==================================================
-@PART[ROC-CSTCM]:BEFORE[RealAntennas]
-{
-	!MODULE[ModuleDataTransmitter],* {}
-	MODULE
-	{
-		name = ModuleRealAntenna
-		antennaDiameter = 0.8	//Same as Orion because I cannot find any data
-		RFBand = K	//Default to K-band
-	}
-	MODULE
-	{
-		name = ModuleRealAntenna
-		referenceGain = 1.5
-		RFBand = S		//Default to S-band
 	}
 }
 
