--- a/GameData/ROCapsules/PartConfigs/CST/CSTNDSPassive.cfg
+++ b/GameData/ROCapsules/PartConfigs/CST/CSTNDSPassive.cfg
@@ -3,30 +3,47 @@ PART
 	name = ROC-CSTNDSPassive
 	module = Part
 	author = Hanson Ma, Colton Franke, VoidCosmos, Drakenex, zer0Kerbal, capkirk
+
 	RSSROConfig = True
-	
+
+	//	============================================================================
+	//	Model and Dimensions
+	//	============================================================================
+
 	MODEL
 	{
 		model = ROCapsules/Assets/CST/nds/NDS1/ndsport1
 	}
-	
+
 	scale = 1.0
 	rescaleFactor = 0.62
-	
+
 	node_stack_top = 0.0, 0.336, 0.0, 0.0, 1.0, 0.0, 1
 	node_stack_bottom = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0, 1
 	node_attach = 0.0, 0.0, 0.0, 0.0, 0.0, 0.0
-	
-	TechRequired = advMetalworks
-	entryCost = 7500
-	cost = 350
+
+	attachRules = 1,1,1,1,0
+
+	//	============================================================================
+	//	Title, Description, Category, Techs
+	//	============================================================================
+
+	TechRequired = unlockParts
+	cost = 150
+	entryCost = 1
 	category = Coupling
 	subcategory = 0
 	title = NASA Docking System (Passive)
 	manufacturer = Boeing
 	description = The NASA Docking System (NDS) is a spacecraft docking and berthing mechanism for US human spaceflight vehicles, such as the Orion Multi-Purpose Crew Vehicle and the Commercial Crew vehicles.
-	attachRules = 1,1,1,1,0
-	
+	tags = starliner, boeing, cst100, cst-100, 100, nasa docking system, nds
+
+	bulkheadProfiles = size1, srf
+
+	//	============================================================================
+	//	Thermo, Durability
+	//	============================================================================
+
 	mass = 0.2
 	dragModelType = default
 	maximum_drag = 0.25
@@ -35,12 +52,16 @@ PART
 	breakingForce = 250
 	breakingTorque = 250
 	crashTolerance = 12
-	maxTemp = 473.15
-	skinMaxTemp = 473.15
-	bulkheadProfiles = size1, srf
-	
-	tags = starliner, boeing, cst100, cst-100, 100, nasa docking system, nds
-	
+	maxTemp = 673.15
+	skinMaxTemp = 773.15
+	emissiveConstant = 0.6
+	thermalMassModifier = 1.0
+	skinMassPerArea = 4
+
+	//	============================================================================
+	//	Modules and Resources
+	//	============================================================================
+
 	MODULE
 	{
 		name = ModuleDockingNode
@@ -60,5 +81,12 @@ PART
 		undockEjectionForce = 0.1
 		stagingEnabled = False
 	}
+}
 
+@PART[ROC-CSTNDSPassive]:AFTER[FerramAerospaceResearch]
+{
+	@MODULE[GeometryPartModule]
+	{
+		%forceUseMeshes = True
+	}
 }
