--- a/GameData/ROCapsules/PartConfigs/CST/CSTNoseCone.cfg
+++ b/GameData/ROCapsules/PartConfigs/CST/CSTNoseCone.cfg
@@ -3,55 +3,86 @@ PART
 	name = ROC-CSTNoseCone
 	module = Part
 	author = Hanson Ma, Colton Franke, VoidCosmos, Drakenex, zer0Kerbal, capkirk
+
 	RSSROConfig = True
-	
+
+	//	============================================================================
+	//	Model and Dimensions
+	//	============================================================================
+
 	MODEL
 	{
 		model = ROCapsules/Assets/CST/noseCone/CST101_CAP
 		//scale = 1.67, 1.67, 1.67
 	}
-	
+
 	scale = 1
 	rescaleFactor = 2.15
-	
-	node_stack_bottom = 0.0, -0.17209, 0.0, 0.0, -1.0, 0.0, 1
-	fx_gasBurst_white = 0.0, -0.2, 0.0, 0.0, 1.0, 0.0, decouple
-	
+
+	node_stack_bottom = 0.0, 0.09535, 0.0, 0.0, -1.0, 0.0, 1
+
+	attachRules = 1,0,1,1,1
+
+	fx_gasBurst_white = 0.0, -0.09535, 0.0, 0.0, 1.0, 0.0, decouple
 	sound_decoupler_fire = decouple
-	
-	TechRequired = advAerodynamics
-	entryCost = 1500
-	cost = 100
+
+	//	============================================================================
+	//	Title, Description, Category, Techs
+	//	============================================================================
+
+	TechRequired = unlockParts
+	cost = 150
+	entryCost = 1
 	category = Aero
 	subcategory = 0
 	title = CST-100 Nose Cone
 	manufacturer = Boeing
 	description = A protective nose cone for the NASA Docking System of the CST-100 Starliner.
-	attachRules = 1,0,1,1,1
-	
+	tags = starliner, boeing, cst100, cst-100, 100
+
+	bulkheadProfiles = size1
+
+	//	============================================================================
+	//	Thermo, Durability
+	//	============================================================================
+
 	mass = 0.1
 	dragModelType = default
 	maximum_drag = 0.1
 	minimum_drag = 0.1
-	angularDrag = .5
+	angularDrag = 0.5
 	crashTolerance = 14
 	breakingForce = 100
 	breakingTorque = 100
-	maxTemp = 573.15
-	skinMaxTemp = 673.15
-	fuelCrossFeed = False
+	maxTemp = 973.15
+	skinMaxTemp = 1073.15
+	emissiveConstant = 0.6
+	thermalMassModifier = 1.0
+	skinMassPerArea = 4
 	stagingIcon = DECOUPLER_HOR
+	fuelCrossFeed = False
+	PhysicsSignificance = 0
 	stageOffset = 1
 	chilStageOffset = 1
-	bulkheadProfiles = size1
-	
-	tags = starliner, boeing, cst100, cst-100, 100
-	
+
+	//	============================================================================
+	//	Modules and Resources
+	//	============================================================================
+
 	MODULE
 	{
 		name = ModuleDecouple
-		ejectionForce = 2.5
+		menuName = Jettison Nose Cone
+		ejectionForce = 10
+		isOmniDecoupler = false
 		explosiveNodeID = bottom
 	}
-	
+}
+
+@PART[ROC-CSTNoseCone]:AFTER[FerramAerospaceResearch]
+{
+	@MODULE[GeometryPartModule]
+	{
+		%forceUseMeshes = True
+	}
 }
