--- a/GameData/ROCapsules/PartConfigs/CST/CSTParachute.cfg
+++ b/GameData/ROCapsules/PartConfigs/CST/CSTParachute.cfg
@@ -3,70 +3,105 @@ PART
 	name = ROC-CSTParachute
 	module = Part
 	author = Hanson Ma, Colton Franke, VoidCosmos, Drakenex, zer0Kerbal, capkirk
+
 	RSSROConfig = True
-	
+
+	//	============================================================================
+	//	Model and Dimensions
+	//	============================================================================
+
 	MODEL
 	{
 		model = ROCapsules/Assets/CST/cstParachute/model
 	}
-	
+
 	scale = 1
 	rescaleFactor = 1.24
 
 	node_stack_bottom = 0.0, -0.25, 0.0, 0.0, -1.0, 0.0, 1
 	node_attach = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0
 
-	sound_parachute_open = activate
+	attachRules = 1,0,1,1,1
 
-	TechRequired = landing
-	entryCost = 4600
-	cost = 850
+	//	============================================================================
+	//	Title, Description, Category, Techs
+	//	============================================================================
+
+	TechRequired = unlockParts
+	cost = 150
+	entryCost = 1
 	category = Utility
 	subcategory = 0
 	title = CST-100 Parachute Pack
 	manufacturer = Boeing
 	description = The parachute pack for the CST-100 "Starliner" command module.
-	attachRules = 1,0,1,1,1
-	
+	tags = starliner, boeing, cst100, cst-100, 100
+	bulkheadProfiles = size2
+
+	sound_parachute_open = activate
+
+	//	============================================================================
+	//	Thermo, Durability
+	//	============================================================================
+
 	mass = 0.26
 	dragModelType = default
 	angularDrag = .1
 	crashTolerance = 10
-	maxTemp = 673.15
-	skinMaxTemp = 773.15
-	emissiveConstant = 0.7
+	emissiveConstant = 0.6
+	thermalMassModifier = 1.0
+	skinMassPerArea = 4
 	breakingForce = 100
 	breakingTorque = 50
 	bodyLiftMultiplier = 0
 	stagingIcon = PARACHUTES
 	fuelCrossFeed = False
-	bulkheadProfiles = size2
 	stageOffset = 1
 	childStageOffset = 1
-	
-	tags = starliner, boeing, cst100, cst-100, 100
-	
-	MODULE:NEEDS[!RealChute]
+	buoyancyUseCubeNamed = PACKED
+
+	//	============================================================================
+	//	Animations and Textures
+	//	============================================================================
+
+	EFFECTS
 	{
-		name = ModuleParachute
-		invertCanopy = true
-		autoCutSpeed = 0.5
-		capName = cap
-		canopyName = canopy
-		semiDeployedAnimation = semiDeploy
-		fullyDeployedAnimation = fullyDeploy
-		stowedDrag = 0.1
-		semiDeployedDrag = 25
-		fullyDeployedDrag = 500
-		minAirPressureToOpen = 0.04
-		clampMinAirPressure = 0.04
-		deployAltitude = 2500
-		deploymentSpeed = 0.12
-		semiDeploymentSpeed = 0.5
-		chuteMaxTemp = 423.15
+		rcpredeploy
+		{	AUDIO
+			{	channel = Ship
+				clip = sound_parachute_open
+				volume = 1
+			}
+		}
+		rcdeploy
+		{
+			AUDIO
+			{	channel = Ship
+				clip = sound_parachute_single
+				volume = 1
+			}
+		}
+		rccut
+		{	AUDIO
+			{	channel = Ship
+				clip = RealChute/Sounds/sound_parachute_cut
+				volume = 1
+			}
+		}
+		rcrepack
+		{	AUDIO
+			{	channel = Ship
+				clip = RealChute/Sounds/sound_parachute_repack
+				volume = 1
+			}
+		}
 	}
-	
-	MODULE:NEEDS[RealChute]
+
+	//	============================================================================
+	//	Modules and Resources
+	//	============================================================================
+
+	MODULE
 	{
 		name = RealChuteModule
 		caseMass = 0.26
@@ -93,63 +128,26 @@ PART
 			cutAlt = 0
 		}
 	}
-	
+
 	MODULE
 	{
 		name = ModuleDragModifier
 		dragCubeName = DEPLOYED
 		dragModifier = 25
 	}
-	
+
 	MODULE
 	{
 		name = ModuleDragModifier
 		dragCubeName = SEMIDEPLOYED
 		dragModifier = 15
 	}
-	
-	EFFECTS
-	{
-		rcpredeploy
-		{
-			AUDIO
-			{
-				channel = Ship
-				clip = sound_parachute_open
-				volume = 1
-			}
-		}
+}
 
-		rcdeploy
-		{
-			AUDIO
-			{
-				channel = Ship
-				clip = sound_parachute_single
-				volume = 1
-			}
-		}
-
-		rccut
-		{
-			AUDIO
-			{
-				channel = Ship
-				clip = RealChute/Sounds/sound_parachute_cut
-				volume = 1
-			}
-		}
-
-		rcrepack
-		{
-			AUDIO
-			{
-				channel = Ship
-				clip = RealChute/Sounds/sound_parachute_repack
-				volume = 1
-			}
-		}
-	}
+@PART[ROC-CSTParachute]:AFTER[zzzRealismOverhaul]
+{
+	@maxTemp = 973.15
+	@skinMaxTemp = 2673.15
 }
 
 @PART[ROC-CSTParachute]:AFTER[zzzRealismOverhaul]
@@ -164,4 +162,12 @@ PART
 			@deploymentAlt = 3350
 		}
 	}	 
+}
+
+@PART[ROC-CSTParachute]:AFTER[FerramAerospaceResearch]
+{
+	@MODULE[GeometryPartModule]
+	{
+		%forceUseMeshes = True
+	}
 }
