--- a/GameData/ROCapsules/PartConfigs/CST/CSTSM.cfg
+++ b/GameData/ROCapsules/PartConfigs/CST/CSTSM.cfg
@@ -3,32 +3,50 @@ PART
 	name = ROC-CSTSM
 	module = Part
 	author = Hanson Ma, Colton Franke, VoidCosmos, Drakenex, zer0Kerbal, capkirk
+
 	RSSROConfig = True
-	
+
+	//	============================================================================
+	//	Model and Dimensions
+	//	============================================================================
+
 	MODEL
 	{
 		model = ROCapsules/Assets/CST/serviceModule/model
 	}
-	
+
 	scale = 1.0
 	rescaleFactor = 1.24
-	
+
 	node_stack_top = 0.0, 0.273, 0.0, 0.0, 1.0, 0.0, 2
 	node_stack_bottom = 0.0, -1.15, 0.0, 0.0, -1.0, 0.0, 2
-	node_stack_bottom_2 = 0.0, -0.75, 0.0, 0.0, -1.0, 0.0, 1
+	node_stack_engine = 0.0, -0.75, 0.0, 0.0, -1.0, 0.0, 1
+
+	attachRules = 1,1,1,1,0
+
 	fx_gasBurst_white = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, decouple
-	
-	sound_decoupler_fire = decouple
-	TechRequired = largeVolumeContainment
-	entryCost = 2200
+
+	//	============================================================================
+	//	Title, Description, Category, Techs
+	//	============================================================================
+
+	TechRequired = unlockParts
+	cost = 150
+	entryCost = 1
 	cost = 500
 	category = FuelTank
 	subcategory = 0
 	title = CST-100 Service Module
 	manufacturer = Boeing
 	description = The service module for the CST-100 "Starliner" spacecraft.
-	attachRules = 1,1,1,1,0
-	
+	tags = starliner, boeing, cst100, cst-100, 100
+
+	bulkheadProfiles = size1, size3
+
+	//	============================================================================
+	//	Thermo, Durability
+	//	============================================================================
+
 	mass = 3.89
 	dragModelType = default
 	maximum_drag = 0.2
@@ -37,28 +55,30 @@ PART
 	crashTolerance = 10
 	breakingForce = 250
 	breakingTorque = 250
-	maxTemp = 473.15
-	skinMaxTemp = 573.15
+	maxTemp = 673.15
+	skinMaxTemp = 773.15
 	fuelCrossFeed = True
-	bulkheadProfiles = size1, size3
-	emissiveConstant = 0.90
-	heatConductivity = 0.75
-	thermalMassModifier = 5
+	emissiveConstant = 0.6 // not too absorptive for reentry
+	thermalMassModifier = 1.0
+	skinMassPerArea = 2.0
 	radiatorHeadroom = 0.5
-	
-	tags = starliner, boeing, cst100, cst-100, 100
+
+	//	============================================================================
+	//	Animations and Textures
+	//	============================================================================
 
 	EFFECTS
 	{
 		rcs
 		{
-			AUDIO
+			AUDIO_MULTI_POOL
 			{
 				channel = Ship
+				transformName = RCS
 				clip = sound_rocket_mini
 				volume = 0.0 0.0
-				volume = 0.1 0.0
-				volume = 0.5 0.025
+				volume = 0.02 0.1
+				volume = 0.5 0.1
 				volume = 1.0 0.1
 				pitch = 0.0 0.75
 				pitch = 1.0 1.5
@@ -78,21 +98,28 @@ PART
 		}
 	}
 
+	//	============================================================================
+	//	Modules and Resources
+	//	============================================================================
+
 	MODULE
 	{
 		name = ModuleDecouple
+		menuName = Jettison Service Module
 		ejectionForce = 15
+		isOmniDecoupler = false
 		explosiveNodeID = top
 	}
-	
+
 	MODULE
 	{
 		name = ModuleRCSFX
+		stagingEnabled = True
 		thrusterTransformName = RCS
 		thrusterPower = 0.44
 		resourceFlowMode = STAGE_PRIORITY_FLOW
 		runningEffectName = rcs
-		
+
 		PROPELLANT
 		{
 			name = MMH
@@ -111,7 +138,7 @@ PART
 			key = 1 110
 		}
 	}
-	
+
 	MODULE
 	{
 		name = ModuleDeployableSolarPanel
@@ -122,7 +149,7 @@ PART
 		resourceName = ElectricCharge
 		chargeRate = 3.0
 	}
-	
+
 	MODULE
 	{
 		name = ModuleFuelTanks
@@ -167,4 +194,3 @@ PART
 		}
 	}
 }
-
