--- a/GameData/ROCapsules/PartConfigs/CST/CSTHS.cfg
+++ b/GameData/ROCapsules/PartConfigs/CST/CSTHS.cfg
@@ -3,30 +3,47 @@ PART
 	name = ROC-CSTHS
 	module = Part
 	author = Hanson Ma, Colton Franke, VoidCosmos, Drakenex, zer0Kerbal, capkirk
+
 	RSSROConfig = True
-	
+
+	//	============================================================================
+	//	Model and Dimensions
+	//	============================================================================
+
 	MODEL
 	{
 		model = ROCapsules/Assets/CST/cstHeatShield/model
 	}
-	
+
 	scale = 1.0
 	rescaleFactor = 1.24
-	
+
 	node_stack_bottom = 0.0, -0.3 , 0.0, 0.0, -1.0, 0.0, 2
 	node_stack_top = 0.0, -0.041 , 0.0, 0.0, 1.0, 0.0, 2
 
-	fx_gasBurst_white = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, decouple
-	
-	TechRequired = heavyAerodynamics
-	entryCost = 1800
-	cost = 900
+	attachRules = 1,0,1,0,0
+
+	fx_gasBurst_white = 0.0, -0.041, 0.0, 0.0, 1.0, 0.0, decouple
+
+	//	============================================================================
+	//	Title, Description, Category, Techs
+	//	============================================================================
+
+	TechRequired = unlockParts
+	cost = 150
+	entryCost = 1
 	category = Thermal
 	subcategory = 0
 	title = CST-100 Heat Shield
 	manufacturer = Boeing
 	description = The heat shield for CST-100 "Starliner" command module.
-	attachRules = 1,0,1,0,0
+	tags = starliner, boeing, cst100, cst-100, 100
+
+	bulkheadProfiles = size3
+
+	//	============================================================================
+	//	Thermo, Durability
+	//	============================================================================
 
 	mass = 0.23
 	dragModelType = default
@@ -36,29 +53,45 @@ PART
 	breakingForce = 200
 	breakingTorque = 200
 	crashTolerance = 12
-	maxTemp = 773.15
-	skinMaxTemp = 2773.15
 	fuelCrossFeed = False
 	PhysicsSignificance = 0
+	stagingIcon = DECOUPLER_HOR
 	stageOffset = 1
 	childStageOffset = 1
-	stagingIcon = DECOUPLER_HOR
-	bulkheadProfiles = size3
-	
-	tags = starliner, boeing, cst100, cst-100, 100
-	
-	heatShieldTag = LEO
+
 	heatShieldDiameter = 4.56
-	resetHeatShieldMass = true
+	heatShieldTag = LEO
 	resetHeatShieldAblator = true
+	resetHeatShieldMass = true
 	emissiveConstant = 0.6
 	thermalMassModifier = 1.0
 	skinMassPerArea = 4
 
+	//	============================================================================
+	//	Modules and Resources
+	//	============================================================================
+
+	MODULE
+	{
+		name = ModuleLiftingSurface
+		useInternalDragModel = False
+		deflectionLiftCoeff = 1.4
+		liftingSurfaceCurve = CapsuleBottom
+		disableBodyLift = False
+		omnidirectional = False
+		perpendicularOnly = True
+		transformDir = Y
+		transformSign = -1
+		nodeEnabled = True
+		attachNodeName = bottom
+	}
+
 	MODULE
 	{
 		name = ModuleDecouple
+		menuName = Jettison Heat Shield
 		ejectionForce = 5
+		isOmniDecoupler = false
 		explosiveNodeID = top
 	}	
 }
