Fix Orion HS Take 200

--- a/GameData/ROCapsules/PartConfigs/Orion/OrionHS.cfg
+++ b/GameData/ROCapsules/PartConfigs/Orion/OrionHS.cfg
@@ -60,10 +60,12 @@ PART
 	fuelCrossFeed = False
 	bulkheadProfiles = size0 
 
-
 	//use new heat shield tagging system to configure the shield instead
-	resetHeatShieldMass = True
-	resetHeatShieldAblator = True
-	heatShieldTag = Lunar
 	heatShieldDiameter = 4.9
+	heatShieldTag = Lunar
+	resetHeatShieldAblator = true
+	resetHeatShieldMass = true
+	emissiveConstant = 0.6
+	thermalMassModifier = 1.0
+	skinMassPerArea = 4
 }
