--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/BigG/BigGeminiHSLunar.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/BigG/BigGeminiHSLunar.cfg
@@ -22,7 +22,7 @@ PART
 	cost = 360
 	category = Thermal
 	subcategory = 0
-	title        = Big Gemini Lunar Heat Shield
+	title = Big Gemini Lunar Heat Shield
 	manufacturer = McDonnell Aircraft
 	description  = Heatshield for the Big Gemini capsule
 	attachRules = 1,0,1,0,0
@@ -34,22 +34,21 @@ PART
 	breakingForce = 72
 	breakingTorque = 72
 	crashTolerance = 18
-	maxTemp = 1500
-	skinMaxTemp = 2600
-	skinSkinConductionMult = 0.1
 	fuelCrossFeed = False
 	stageOffset = 1
 	childStageOffset = 1
-	thermalMassModifier = 1.0
 	bulkheadProfiles = size1p2
 
 	tags = ?gemina 1.5 heatshield leo beale loaf bread gemini
 
 	//use new heat shield tagging system to configure the shield instead
-	resetHeatShieldMass = True
-	resetHeatShieldAblator = True
-	heatShieldTag = Lunar
 	heatShieldDiameter = 3.9
+	heatShieldTag = Lunar
+	resetHeatShieldAblator = true
+	resetHeatShieldMass = true
+	emissiveConstant = 0.6
+	thermalMassModifier = 1.0
+	skinMassPerArea = 4
 
 	MODULE
 	{
